devops/k8s/cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-tunnel
  namespace: velvet-mx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-tunnel
  template:
    metadata:
      labels:
        app: cloudflared-tunnel
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          args:
            - tunnel
            - --no-autoupdate
            - --protocol
            - http2
            - --url
            - http://velvet-mx-app:80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
