devops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: velvet-mx-app
  namespace: velvet-mx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app.kubernetes.io/name: velvetmx
    app.kubernetes.io/component: app
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: velvet-mx
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: velvetmx
    app.kubernetes.io/component: redis
