devops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velvet-mx-ingress
  namespace: velvet-mx
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - velvetmx.staging.vikoapps.com
      secretName: velvet-mx-tls
  rules:
    - host: velvetmx.staging.vikoapps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: velvet-mx-app
                port:
                  number: 80
